force-app/main/default/objects/CBK_PermissionRecycleSettings__mdt/CBK_PermissionRecycleSettings__mdt.object-meta.xml
<CustomObject>
    <label>Permission Recycle Setting</label>
    <pluralLabel>Permission Recycle Settings</pluralLabel>
</CustomObject>