force-app/main/default/objects/CBK_PermissionRecycleSettings__mdt/fields/CBK_Activo__c.field-meta.xml
<CustomField>
    <fullName>CBK_Activo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check que indica si el registro ha de ser considerado para la revisión de permisos asignados</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>