force-app/main/default/objects/CBK_PermissionRecycleSettings__mdt/fields/CBK_DesactivarUsuario__c.field-meta.xml
<CustomField>
    <fullName>CBK_DesactivarUsuario__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador que denota si apare de realizarse la operación de reciclado de permisos, adicionalmente se ha de proceder a desactivar al usuario que cumpla las condiciones de reciclaje del permiso.</description>
    <label>Desactivar usuario</label>
    <type>Checkbox</type>
</CustomField>