force-app/main/default/objects/CBK_PermissionRecycleSettings__mdt/fields/CBK_DiasInactividad__c.field-meta.xml
<CustomField>
    <fullName>CBK_DiasInactividad__c</fullName>
    <description>Número de días de inactividad del usuario que se han de superar para se ejecute la regla de reciclaje de permisos</description>
    <label>Días inactividad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>