force-app/main/default/objects/CBK_PermissionRecycleSettings__mdt/fields/CBK_NombrePermisoDestino__c.field-meta.xml
<CustomField>
    <fullName>CBK_NombrePermisoDestino__c</fullName>
    <description>Texto donde se registrará el nombre del permiso por el que se sustituirá el original. En el caso del PermissionSet, el valor de Name. En el caso de PermissionSetGroup el DeveloperName y en el PermissionSetLicense el DeveloperName también.</description>
    <label>Nombre Permiso Sustituto</label>
    <length>80</length>
    <type>Text</type>
</CustomField>