force-app/main/default/objects/CBK_PermissionRecycleSettings__mdt/fields/CBK_NombrePermisoOrigen__c.field-meta.xml
<CustomField>
    <fullName>CBK_NombrePermisoOrigen__c</fullName>
    <description>Texto donde se registrará el nombre del permiso a revisar o que determinartá la exclusión de los usuarios en el proceso batch. En el caso del PermissionSet, el valor de Name. En el caso de PermissionSetGroup el DeveloperName y en el PermissionSetLicense el DeveloperName también. En el caso de los Custom Permission se indicará el DeveloperName.</description>
    <label>Nombre Permiso a Reciclar</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>