force-app/main/default/objects/CBK_PermissionRecycleSettings__mdt/fields/CBK_Operacion__c.field-meta.xml
<CustomField>
    <fullName>CBK_Operacion__c</fullName>
    <description>Lista de selección donde se indicará la operación a realizar: Sustitución/Baja de Permission Set, Permission Set Group o PermissionSet License</description>
    <label>Operación</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CBK_Baja_PSL</fullName>
                <label>Baja PermissionSetLicense</label>
            </value>
            <value>
                <fullName>CBK_Baja_PS</fullName>
                <label>Baja PermissionSet</label>
            </value>
            <value>
                <fullName>CBK_Baja_PSG</fullName>
                <label>Baja PermissionSetGroup</label>
            </value>
            <value>
                <fullName>CBK_Modificacion_PSL_PSL</fullName>
                <label>Modificación PermissionSetLicense</label>
            </value>
            <value>
                <fullName>CBK_Modificacion_PS_PS</fullName>
                <label>Modificación PermissionSet por PermissionSet</label>
            </value>
            <value>
                <fullName>CBK_Modificacion_PS_PSG</fullName>
                <label>Modificación PermissionSet por PermissionSetGroup</label>
            </value>
            <value>
                <fullName>CBK_Modificacion_PSG_PS</fullName>
                <label>Modificación PermissionSetGroup por PermissionSet</label>
            </value>
            <value>
                <fullName>CBK_Modificacion_PSG_PSG</fullName>
                <label>Modificación PermissionSetGroup por PermissionSetGroup</label>
            </value>
            <value>
                <fullName>CBK_Exclusion_PS</fullName>
                <label>Exclusión del proceso de reciclaje (Permission Set)</label>
            </value>
            <value>
                <fullName>CBK_Exclusion_CP</fullName>
                <label>Exclusión del proceso de reciclaje (Custom Permission)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>